# skilltap

./: .gitignore  AGENTS.md  ARCH.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  MIGRATION_REPORT.md  README.md  ROADMAP.md  SPEC.md  UX.md  VISION.md  biome.json  bunfig.toml  debug-args.ts  install.sh  package.json  tsconfig.json
crates/cli/: Cargo.toml
crates/cli/src/: application.rs  bootstrap_commands.rs  command.rs  daemon.rs  daemon_commands.rs  dispatch.rs  entrypoint.rs  lib.rs  main.rs  outcome.rs  output.rs
crates/cli/src/application/: conditional_profile.rs  execution.rs  instructions.rs  lifecycle.rs  project_skills.rs  reconciliation.rs  status.rs  tests.rs
crates/cli/src/command/: tests.rs
crates/cli/src/entrypoint/: tests.rs
crates/cli/src/output/: tests.rs
crates/cli/tests/: bare_help.rs  compiled_binary.rs  instruction_bridges.rs  native_postconditions.rs  plugin_package.rs
crates/core/: Cargo.toml
crates/core/src/: adoption.rs  bootstrap.rs  compatibility.rs  daemon.rs  executor.rs  foreground_update.rs  hook_mapping.rs  instructions.rs  lib.rs  lifecycle_operation.rs  lifecycle_representation.rs  managed_projection.rs  marketplace.rs  materialization.rs  mutation_authority.rs  native_config.rs  operation_graph.rs  plugin_graph.rs  project_skill.rs  publication.rs  reconciliation.rs  skill.rs  skill_compatibility.rs  skill_lifecycle.rs  skill_source.rs  updates.rs
crates/core/src/domain/: artifact.rs  capability.rs  compatibility.rs  conditional_profile.rs  dependency_graph.rs  identity.rs  installation.rs  mod.rs  observation.rs  operation.rs  resource.rs  scope.rs  source.rs  validated_newtype.rs
crates/core/src/runtime/: artifact.rs  bounded_process.rs  clock.rs  command.rs  error.rs  executable.rs  external_tree.rs  filesystem.rs  mod.rs  observation.rs  path_value.rs  paths.rs  scope.rs  strict_json.rs
crates/core/src/storage/: config.rs  inventory.rs  managed_artifact.rs  managed_record.rs  mod.rs  repository.rs  state.rs  tests.rs
crates/core/tests/: bootstrap_integration.rs  foundation_integration.rs  runtime_integration.rs  storage_integration.rs
crates/core/tests/fixtures/: command_fixture.rs
crates/harnesses/: Cargo.toml
crates/harnesses/src/: adapter_helpers.rs  bootstrap.rs  conditional_profile.rs  effective_state.rs  lib.rs  lifecycle.rs  load_verification.rs  managed_codex_project.rs  managed_projection.rs  materialization.rs  native_distribution.rs  plugin_graph.rs  registry.rs  update_resolution.rs
crates/harnesses/src/adapters/: claude.rs  codex.rs  codex_managed.rs  copilot.rs  copilot_managed.rs  cursor.rs  factory.rs  factory_managed.rs  file_managed.rs  gemini.rs  gemini_managed.rs  kilo.rs  kimi.rs  kiro.rs  kiro_managed.rs  mod.rs  opencode.rs  opencode_managed.rs  pi.rs  pi_profile.rs  (+6 more)
crates/harnesses/tests/: bootstrap.rs  detection.rs  lifecycle_scope.rs  native_coexistence.rs  normalization.rs
(+811 files in other folders)
