[workspace]
members = [
    "crates/core",
    "crates/harnesses",
    "crates/cli",
    "crates/test-support",
]
resolver = "3"

[workspace.package]
version = "3.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nklisch/skilltap"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
skilltap-core = { path = "crates/core" }
skilltap-harnesses = { path = "crates/harnesses" }
