[workspace]
members = [
    "crates/core",
    "crates/harnesses",
    "crates/cli",
    "crates/test-support",
]
resolver = "3"

[workspace.package]
version = "3.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/nklisch/skilltap"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
skilltap-core = { path = "crates/core" }
skilltap-harnesses = { path = "crates/harnesses" }
skilltap-test-support = { path = "crates/test-support" }
toml = "1.1.2"
