[package]
name = "skilltap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
skilltap-core.workspace = true
skilltap-harnesses.workspace = true
libc.workspace = true

[dev-dependencies]
skilltap-test-support.workspace = true
sha2.workspace = true

[[bin]]
name = "skilltap"
path = "src/main.rs"
