[package]
name = "skilltap-harnesses"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skilltap-core.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
skilltap-test-support.workspace = true

[lib]
path = "src/lib.rs"
